# cmake-demo

./: README.md
cmake-demo-object_sub/: CMakeLists.txt  READMD.md
cmake-demo-object_sub/cacl/: CMakeLists.txt  cacl.cpp
cmake-demo-object_sub/src/: head.cpp  main.cpp
cmake-demo-static_sublib/: CMakeLists.txt  README.md
cmake-demo-static_sublib/cacl/: CMakeLists.txt  cacl.h
cmake-demo-static_sublib/include/: head.h
